--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,15 @@ buildscript {
     repositories{
         maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.3.RELEASE")
+    }
 }
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
     id 'idea'
+    id 'com.gradle.build-scan' version '2.2.1'
 }
 version = '0.1.0'
 repositories {
@@ -29,13 +33,18 @@ repositories {
 
 }
 
-
+ext{
+    springBootVersion = '2.1.3.RELEASE'
+}
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-logging:2.1.3.RELEASE'
+    implementation 'org.apache.commons:commons-lang3:3.9'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
